# string_algorithms

./: .gitignore  CMakeLists.txt  README.md  naive_SACA.c
data/: ex1.fna  mini.fasta
lib/: ctoi.c  ctoi.h  ndarray.c  ndarray.h
src/: bmh.c  ctoi.c  ctoi.h  jaccard_dist.c  jaccard_functions.c  naive_SACA.c  suffix_array.c  suffix_array.h  suffix_tree.c  suffix_tree.h
test/: TEST_ALL.sh  ctoi.c  run.c  suffix_tree_test.c  test_all.sh  test_bmh.c  test_ctoi.c  test_jaccard.c  test_naive_SACA.c  test_ndarray.c  test_suffix_array.c
